data/derived/comb/progs/unify/prog7863.ml.out
Characters 58-59:
  List.fold_left x;;
                 ^
Error: This expression has type int but an expression was expected of type
         'a -> 'b -> 'a
